@@ -49,8 +49,8 @@ public class UtilTest {
         assertEquals(Integer.valueOf(5), statistics.getAlbumCount());
         assertEquals(Integer.valueOf(4), statistics.getSongCount());
         assertEquals(Integer.valueOf(910823), statistics.getArtistCount());
-        assertEquals(new Long(30L), statistics.getTotalDurationInSeconds());
-        assertEquals(new Long(2930491082L), statistics.getTotalLengthInBytes());
+        assertEquals(Long.valueOf(30L), statistics.getTotalDurationInSeconds());
+        assertEquals(Long.valueOf(2930491082L), statistics.getTotalLengthInBytes());
         assertEquals(new Date(1568350960725L), statistics.getScanDate());
     }
 
@@ -68,8 +68,8 @@ public class UtilTest {
         assertEquals(Integer.valueOf(5), statistics.getAlbumCount());
         assertEquals(Integer.valueOf(4), statistics.getSongCount());
         assertEquals(Integer.valueOf(910823), statistics.getArtistCount());
-        assertEquals(new Long(30L), statistics.getTotalDurationInSeconds());
-        assertEquals(new Long(2930491082L), statistics.getTotalLengthInBytes());
+        assertEquals(Long.valueOf(30L), statistics.getTotalDurationInSeconds());
+        assertEquals(Long.valueOf(2930491082L), statistics.getTotalLengthInBytes());
         assertEquals(new Date(1568350960725L), statistics.getScanDate());
     }
 
